# ggl

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  gcltest.cc
include/gcl/: exception.hh  misc.hh  parser.hh  value.hh
src/: CMakeLists.txt  parser.cc  tokenizer.cc  tokenizer.hh
tests/: a.gcl
